tests/rosetta/out/Smalltalk/create-a-file.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| createFile createDir main fs |
createFile := [:fs :fn | ((fs includes: fn)) ifTrue: [
Transcript show: ((((('open ') + fn)) + (': file exists'))) printString; cr.
] ifFalse: [
fs at: fn put: false.
Transcript show: ((((('file ') + fn)) + (' created!'))) printString; cr.
]. ].
createDir := [:fs :dn | ((fs includes: dn)) ifTrue: [
Transcript show: ((((('mkdir ') + dn)) + (': file exists'))) printString; cr.
] ifFalse: [
fs at: dn put: true.
Transcript show: ((((('directory ') + dn)) + (' created!'))) printString; cr.
]. ].
main := [ fs := Dictionary from:{}.
fs at: 'docs' put: true.
createFile value: fs value: 'input.txt'.
createFile value: fs value: '/input.txt'.
createDir value: fs value: 'docs'.
createDir value: fs value: '/docs'. ].
main value.
